# chibi-tech

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: FetchGLFW.cmake  SetPCH.cmake
ChibiTech/: CMakeLists.txt  stdafx.h
ChibiTech/Source/: Engine.h  EngineEntry.cpp  Entry.h  Game.h  Types.h
ChibiTech/Source/Gpu/: D3D12Common.h  GpuBuffer.cpp  GpuBuffer.h  GpuCommandList.cpp  GpuCommandList.h  GpuCommandQueue.cpp  GpuCommandQueue.h  GpuDescriptorAllocator.cpp  GpuDescriptorAllocator.h  GpuDevice.cpp  GpuDevice.h  GpuDynamicDescriptorHeap.cpp  GpuDynamicDescriptorHeap.h  GpuFormat.h  GpuMeshManager.cpp  GpuMeshManager.h  GpuPso.cpp  GpuPso.h  GpuQueue.cpp  GpuQueue.h  GpuQueueManager.cpp  GpuQueueManager.h  GpuRenderPass.h  GpuRenderTarget.cpp  GpuRenderTarget.h  GpuRenderTexture.cpp  GpuRenderTexture.h  GpuResource.cpp  GpuResource.h  GpuResourceState.cpp  GpuResourceState.h  GpuResourceViews.cpp  GpuResourceViews.h  GpuRootSignature.cpp  GpuRootSignature.h  GpuState.cpp  GpuState.h  GpuSwapchain.cpp  GpuSwapchain.h  GpuTexture.cpp  (+32 more)
ChibiTech/Source/Math/: Color.h  Geometry.cpp  Geometry.h  Math.h
ChibiTech/Source/Platform/: Assert.h  Console.cpp  Console.h  Platform.h  Timer.cpp  Timer.h  Window.cpp  Window.h
ChibiTech/Source/Platform/Nix/: NixCommon.cpp
ChibiTech/Source/Platform/Win32/: Win32Common.cpp  Win32Console.cpp
ChibiTech/Source/Systems/: ResourceSystem.cpp  ResourceSystem.h  ShaderLoader.cpp  ShaderLoader.h
ChibiTech/Source/Util/: Hash.h  SparseStorage.h  array.h  bit.h
Docs/: Style.md
Samples/: CMakeLists.txt
Samples/CpuRaytracer/: CpuRaytracerEntry.cpp  Raytracer.cpp  Raytracer.h  WorkQueue.cpp  WorkQueue.h
Samples/CpuRaytracer/Content/Shaders/: FullscreenQuad.Vtx.hlsl
Samples/HelloCube/: HelloCube.cpp
Samples/HelloCube/Content/Shaders/: TestCube.Vtx.hlsl
Samples/HelloTexture/: HelloTexture.cpp
Samples/HelloTexture/Content/Shaders/: GenerateMips.Cpt.hlsl  Texture.Pxl.hlsl  Texture.Vtx.hlsl
Samples/HelloTriangle/: HelloTriangle.cpp
Samples/HelloTriangle/Content/Shaders/: TestTriangle.Vtx.hlsl
